1.9.80 (2.0.0 beta1):
-Add: Parallel ReplayGain calculation in the ReplayGain tool
-Add: Move tracks to new Album via context menu in the ReplayGain tool
-Add: sox plugin with support for some new file formats
-Add: Convert sample rate and sample size, downmix and apply effects (normalize, bass and treble) using sox
-Change: Remember dimensions of the sub-windows and dialogs
-Fix: Handle internal ReplayGain calculation properly
-Fix: Drop directories onto the ReplayGain tool window
-Fix: Don't accept dropping tracks onto albums with different codec or sampling rate in the ReplayGain tool

1.6.3:
-Add: Brazilian Portuguese translation (by André Marcelo Alvarenga)
-Fix: Make sure the file chooser dialog won't get overlayed by the options dialog in non-KDE environments

1.6.2:
-Fix: Skip files that ought to be skipped instead of generating a new file name
-Fix: Make saving custom profiles work again
-Fix: Don't mix up the output directory history for metadata and normal mode
-Fix: Show proper progress when applying album gain

1.6.1:
-Fix: Don't try to restore the file list when calling soundKonverter while it is running

1.6.0:
-Add: Update translations
-Fix: When loading file lists some options were ignored

1.5.90 (1.6.0 rc1):
-Add: Make the 'Failed' status click-able and open the log if clicked
-Add: Make the file name of covers written to the output directory configureble
-Change: Remove the info tab from the options editor
-Change: Discard changes in the options editor when selecting a different file in file list
-Fix: Problem dialog wasn't shown when dropping unsupported files on the soundKonverter or ReplayGain tool window
-Fix: Show progress when decoding properly
-Fix: Crash when in options editor opened items finished
-Fix: Crash with ogg files containing covers but no mime type or description

1.5.0:
-Add: Update translations

1.4.90 (1.5.0 rc1):
-Add: Copy embedded covers for wma files
-Add: Calculate Album Gain for albums in the conversion list